Bug #21652 I_S.PROCESSLIST truncates STATE field compared to SHOW FULL PROCESSLIST
Submitted: 15 Aug 2006 13:13 Modified: 2 Sep 2006 4:04
Reporter: Stewart Smith
Status: Closed
Category:Server: I_S Severity:S3 (Non-critical)
Version:5.1.12bk OS:
Assigned to: Bugs System Target Version:

[15 Aug 2006 13:13] Stewart Smith
Description:
mysql> select * from INFORMATION_SCHEMA.PROCESSLIST;
+----+-----------------+-----------+------+---------+------+------------------------------
--+----------------------------------------------+
| ID | USER            | HOST      | DB   | COMMAND | TIME | STATE                        
 | INFO                                     |
+----+-----------------+-----------+------+---------+------+------------------------------
--+----------------------------------------------+
|  4 | root            | localhost | test | Query   |    0 | preparing                    
 | select * from INFORMATION_SCHEMA.PROCESSLIST |
|  2 | event_scheduler | localhost | NULL | Connect |  441 | Suspended                    
 | NULL                                     |
|  1 | system user     |           |      | Daemon  |    1 | Waiting for event from
ndbclus | NULL                                     |
+----+-----------------+-----------+------+---------+------+------------------------------
--+----------------------------------------------+

mysql> show full processlist;
+----+-----------------+-----------+------+---------+------+------------------------------
-----+-----------------------+
| Id | User            | Host      | db   | Command | Time | State                        
    | Info                 |
+----+-----------------+-----------+------+---------+------+------------------------------
-----+-----------------------+
|  1 | system user     |           |      | Daemon  |    1 | Waiting for event from
ndbcluster | NULL                 |
|  2 | event_scheduler | localhost | NULL | Connect |  484 | Suspended                    
    | NULL                 |
|  4 | root            | localhost | test | Query   |    0 | NULL                         
    | show full processlist |
+----+-----------------+-----------+------+---------+------+------------------------------
-----+-----------------------+

How to repeat:
see description

Suggested fix:
increase length of STATE field to at least accommodate NDB Binlog state strings (64 is
currently sufficient)
[15 Aug 2006 13:19] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10457

ChangeSet@1.2275, 2006-08-15 19:18:57+08:00, stewart@willster.(none) +1 -0
  BUG#21652 I_S.PROCESSLIST truncates STATE field compared to SHOW FULL PROCESSLIST
  
  increase maximum length to 64 (max length that ndb injector creates is currently 62)
[15 Aug 2006 14:15] Stewart Smith
pushed to 5.1-ndb tree. approved by martin
[1 Sep 2006 10:03] Jonas Oreland
pushed to 5.1.12
[2 Sep 2006 4:04] Paul DuBois
Noted in 5.1.12 changelog.