BUG#21652 I_S.PROCESSLIST truncates STATE field compared to SHOW FULL PROCESSLIST

increase maximum length to 64 (max length that ndb injector creates is currently 62)